# sdks

./: README.md
.github/workflows/: ci.yml  release.yml
go/: .gitignore  README.md  client.go  client_test.go  cross_language_test.go  errors.go  go.mod  types.go
java/: README.md  build.gradle  settings.gradle
java/ucotron-sdk/: .gitignore  build.gradle
java/ucotron-sdk-android/: build.gradle.kts
java/ucotron-spring-boot-starter/: build.gradle
php/: .gitattributes  PUBLISHING.md  README.md  composer.json  phpunit.xml
php/src/: ClientConfig.php  LogMiddleware.php  RetryConfig.php  RetryMiddleware.php  UcotronAsync.php  UcotronClient.php
php/src/Exceptions/: UcotronConnectionException.php  UcotronException.php  UcotronRetriesExhaustedException.php  UcotronServerException.php
php/src/Laravel/: UcotronFacade.php  UcotronServiceProvider.php  config.php
php/src/Symfony/: UcotronBundle.php  UcotronExtension.php
php/src/Types/: AugmentResult.php  (+11 more)
php/tests/: ClientConfigTest.php  ExceptionsTest.php  LogMiddlewareTest.php  RetryMiddlewareTest.php  TypesTest.php  UcotronAsyncTest.php  UcotronClientTest.php
python/: README.md  pyproject.toml
python/tests/: test_client.py  test_cross_language.py  test_errors.py  test_types.py  test_types_edge_cases.py
python/ucotron_sdk/: __init__.py  client.py  errors.py  types.py
scripts/: sync_versions.sh
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/__tests__/: client.test.ts  cross_language.test.ts  types.test.ts
typescript/src/: client.ts  errors.ts  index.ts  types.ts
(+34 files in other folders)
